Split backend call for changing passwords and confirming users
